# dl-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dl.txt  download_links.txt  todo.txt
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  downloader.rs  hf.rs  main.rs  search.rs  updater.rs  util.rs
