[package]
name = "dl"
version = "0.1.5"
edition = "2021"
description = "A command-line tool for concurrent downloads from URLs or Hugging Face, with app management and system info utilities."
license = "MIT"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
#reqwest = { version = "0.12.4", features = ["json", "stream"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
once_cell = "1.20"
futures-util = "0.3"
regex = "1.11"
console = "0.15"
tokio-util = { version = "0.7", features = ["io"] }
path-clean = "1.0"
lazy_static = "1.5"
urlencoding = "2.1"
self-replace = "1.5"

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0