[package]
name = "dl"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for concurrent downloads from URLs or Hugging Face, with app management and system info utilities."
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
fern = "0.6" # Removed "colored" feature
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
indicatif = "0.17"
anyhow = "1.0"
url = "2.5"
futures-util = "0.3"
regex = "1.11"
console = "0.15"
path-clean = "1.0"
lazy_static = "1.5"
urlencoding = "2.1"
self-replace = "1.5"

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0